[package]
name = "picoring"
version = "0.2.0"
edition = "2024"
description = "High-performance, zero-copy circular buffer for Rust using hardware memory mirroring."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yagizgil/picoring"
readme = "README.md"
keywords = [
  "ring-buffer",
  "zero-copy",
  "memory",
  "performance",
  "circular-buffer",
]
categories = ["data-structures", "os", "embedded"]

[dependencies]
libc = "0.2.182"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
sysinfo = "0.33"

[[bench]]
name = "ring_bench"
harness = false
