[package]
name = "picoring"
version = "0.4.2"
edition = "2021"
description = "High-performance, zero-copy circular buffer for Rust using hardware memory mirroring."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yagizgil/picoring"
readme = "README.md"
keywords = [
  "ring-buffer",
  "zero-copy",
  "memory",
  "performance",
  "circular-buffer",
]
categories = ["data-structures", "os", "embedded"]

[lib]
name = "picoring"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2.182"
pyo3 = { version = "0.22", features = [
  "extension-module",
  "abi3-py310",
], optional = true }
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
] }

[features]
default = []
python = ["dep:pyo3"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
sysinfo = "0.33"

[[bench]]
name = "ring_bench"
harness = false


[profile.release]
opt-level = 3
lto = true
strip = true
